--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>typing-game-web</title>
+    <title>My Waifuku Ngambek </title>
+    <link rel="icon" href="./public/assets/goblin.jpeg" type="image/x-icon"> 
   </head>
   <body>
     <div id="root"></div>
